--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,19 @@
     margin-left: 50px;
 }
 
+.menu-drop {
+    padding: .5rem;
+}
+
+.menu-drop a {    
+    color: rgba(0,0,0,.5);
+    text-decoration: none;
+}
+
+.menu-drop a:hover {
+    color: rgba(0,0,0,0.8);
+}
+
 .logout {
     position: absolute;
     right: 0px;
@@ -27,6 +40,11 @@
 .welcome {
     text-align: center;
     margin-top: 35vh;
+    font-weight: normal;
+}
+
+.welcome span {
+    font-weight: bold;
 }
 
 header {
@@ -45,4 +63,33 @@ header {
 
 .cadastrar-h2 {
     margin-bottom: 50px;
+}
+
+.btn-cadastrar {
+    float: right;
+}
+
+.convenio {
+    height: 36px;
+    width: 170px;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+}
+
+.last-form-row {
+    margin-bottom: 50px;
+}
+
+.form-consulta {
+    margin: 0 auto;
+    margin-top: 50px;
+    margin-bottom: 150px;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0px 2px 10px rgb(206, 206, 206);
+}
+
+.form-consulta span {
+    margin-left: 5px;
+    margin-right: 15px;
 }
