--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,3 +93,64 @@ header {
     margin-left: 5px;
     margin-right: 15px;
 }
+
+.head-lista {
+    height: 50px;
+    border-radius: 4px;
+    background-color: #e0e0e0;
+    padding-left: 15px;
+    padding-top: 11px;
+}
+
+.head-lista p {
+    font-size: 18px;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin: 0;
+}
+
+.lista-pacientes {
+    overflow: hidden;
+}
+
+.lista-pacientes ul {
+    list-style: none;
+    padding: 7px 15px 0 15px;
+    display: block;
+    height: 40px;
+    border-radius: 4px;
+    margin-bottom: 0;
+}
+
+.lista-pacientes ul:nth-of-type(even) {
+    background-color: #e0e0e0;
+}
+
+.lista-pacientes ul li a {
+    text-decoration: none;
+}
+
+.lista-pacientes ul li {
+    float: right;
+}
+
+.lista-pacientes ul li:nth-of-type(1) {
+    float: left;
+}
+
+.lista-pacientes ul li:nth-of-type(2) {
+    margin-left: 20px;
+}
+
+.label {
+    margin-bottom: 8px;
+}
+
+.field {
+    display: block;
+    height: 38px;
+    padding: 6px 12px;
+    border: 1px solid #afafaf;
+    background-color: #e0e0e0;
+    border-radius: 4px;
+}
